@@ -119,6 +119,18 @@ define mkinitramfs
   (cd $(TREE) && find . | cpio --quiet -o -H newc) > 
 endef
 
+define mkfs.ufs2
+  fs=`mktemp` ; \
+  dd if=/dev/zero of=$${fs} bs=1M count=16 ; \
+  md=`mdconfig -a -t vnode -f $${fs}` ; \
+  mkfs.ufs -O2 /dev/$${md} ; \
+  mnt=`mktemp -d` ; mount /dev/$${md} $${mnt} ; \
+  cp -a $(TREE)/* $${mnt}/ ; \
+  umount $${mnt} ; rmdir $${mnt} ; \
+  mdconfig -d -u $${md} ; \
+  mv $${fs}
+endef
+
 define e2fsck
   e2fsck -fy
 endef
@@ -609,6 +621,10 @@ $(TEMP_INITRD): $(STAMPS)tree-$(targetstring)-stamp arch_tree
 	;; \
 	jffs2) \
 		$(mkjffs2) $(TEMP_INITRD); \
+	;; \
+	ufs2) \
+		$(mkfs.ufs2) $(TEMP)/initrd; \
+		gzip -v9f $(TEMP)/initrd; \
 	;; \
 	*) \
 		echo "Unsupported filesystem type"; \
