@@ -76,6 +76,7 @@ debian-installer (2009xxxx) UNRELEASED; urgency=low
 
   [ Luca Favatella ]
   * Handle libc0.1 (GNU/kFreeBSD) and libc0.3 (GNU/Hurd) as libc6/libc6.1.
+  * Add ufs2 initrd support. Thanks to Robert Millan.
 
  -- Frans Pop <fjp@debian.org>  Sat, 13 Jun 2009 16:35:46 +0200
 
